--- a/css/header.css
+++ b/css/header.css
@@ -57,7 +57,7 @@ header nav {
     font-size: 16px;
     gap: 27px;
     border-top-right-radius: unset;
-    z-index: 1;
+    z-index: 3;
 }
 
 header nav a {
